# ai-calendar-assistant

./: .env.azure_maps_example  .env.example  .env.redis.example  .gitignore  ACA_MANAGED_IDENTITY_CHECKLIST.md  ADMIN_ACCESS_README.md  AI_Calendar_Assistant_Business_Overview.md  AZURE_AUTH_TROUBLESHOOTING.md  AZURE_MAPS_401_SOLUTION.md  AZURE_MAPS_TROUBLESHOOTING.md  CONSOLE_OUTPUT.md  Configure-AdminAccess-Simple.ps1  Configure-AdminAccess.ps1  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  ENHANCED_FUNCTION_CALLS.md  MAILBOX_ERROR_TROUBLESHOOTING.md  MANAGED_IDENTITY_401_FIX.md  PRODUCTION_CONSOLE_EXAMPLE.md  README.md  REDIS_CACHE_IMPLEMENTATION.md  REDIS_DEPLOYMENT_GUIDE.md  REDIS_IMPLEMENTATION_SUMMARY.md  REDIS_TELEMETRY_GUIDE.md  Remove-AdminAccess.ps1  SERVICE_ACCOUNT_FILTERING.md  STATE_HYDRATION_GUIDE.md  TELEMETRY.md  TELEMETRY_FIX_DEPLOYMENT_GUIDE.md  TOKEN_TRACKING.md  TOKEN_TRACKING.md.backup  USER_LOCATION_PLUGIN.md  _assign_licenses.py  _azure_cli_diagnostic.bat  _build_and_push.bat  _clear_messages.py  _container_build.bat  _container_push.bat  _cosmosdb_assign_managed_identity_data_plane_permissions.bat  _cosmosdb_assign_managed_identity_management_plane_permissions.bat  (+148 more)
.azure/: plan.md
agents/: __init__.py  calendar_agent.py  directory_agent.py  email_agent.py  location_agent.py  proxy_agent.py  quality_agent.py  risk_agent.py  trading_agent.py
ai/: agent.py  agent.py___________  azure_openai_client.py  multi_agent.py
api/: chat_completion.py  main.py
docs/: ADAPTIVE_CARDS.md  MIGRATION_EXAMPLE_LLM_ROUTER.md  MIGRATION_GUIDE.md  TOOLS_IMPLEMENTATION_SUMMARY.md  teams-bot-when-to-use-cards.md
identity/: azure_credentials.py
infra/: main.bicep  main.parameters.json
models/: article.py  chat_models.py  graph.py  graph_models.py  openai_models.py
operations/: azure_maps_operations.py  card_operations.py  graph_operations.py  mock_graph_operations.py  risk_data.json  risk_operations.py
plugins/: azure_maps_plugin.py  azure_search_plugin.py  card_plugin.py  datetime_plugin.py  graph_plugin.py  risk_plugin.py  session_plugin.py
prompts/: graph_prompts.py
scenarios/: scenario_01_monday_morning_red_flag.md  scenario_01_monday_morning_red_flag.txt  scenario_02_client_visit_philly.txt  scenario_03_it_allhands_jim_plunkett.txt
sql/: knowledgebase_schema.sql
storage/: cosmosdb_chat_history_manager.py
telemetry/: __init__.py  config.py  config_backup.py  config_simple.py  console_output.py  decorators.py  semantic_kernel_instrumentation.py  token_tracking.py
tests/: recursion.py  test_azure_maps_diagnostics.py  test_azure_maps_minimal.py  test_azure_maps_production.bat  test_azure_maps_production.py  test_azure_maps_standalone.py  test_fast_loading.py  test_minimal.py  test_path_diagnostic.py  test_production_simple.py  test_simple_import.py
tools/: graph_tools.py
utils/: agent_client.py  llm_analytics.py  postgres_checkpoint.py  teams_utilities.py  thread_utilities.py  tool_call_tracker.py
